<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/jardin1_background"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/res_fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50sp"
        android:gravity="center"
        android:text="@string/resul"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="test"
        android:id="@+id/score"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_margin="40sp"
        android:gravity="center"/>

    <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/score_max"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_margin="40sp"
        android:gravity="center"/>-->


    <TextView
        android:id="@+id/bn_chance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="35sp"
        android:gravity="center"
        android:text="@string/chance"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/replay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/rejouer"
        android:textColor="#00f"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/out"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sortir"
        android:textColor="#00f"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>


